syntax = "proto3";
package rollkit.v1;

import "google/protobuf/empty.proto";
import "rollkit/v1/rollkit.proto";
import "rollkit/v1/state.proto";

option go_package = "github.com/rollkit/rollkit/types/pb/rollkit/v1";

// StoreService defines the RPC service for the store package
service StoreService {
  // GetBlock returns a block by height or hash
  rpc GetBlock(GetBlockRequest) returns (GetBlockResponse) {}

  // GetState returns the current state
  rpc GetState(google.protobuf.Empty) returns (GetStateResponse) {}

  // GetMetadata returns metadata for a specific key
  rpc GetMetadata(GetMetadataRequest) returns (GetMetadataResponse) {}

  // ListMetadataKeys returns all available metadata keys with descriptions
  rpc ListMetadataKeys(google.protobuf.Empty) returns (ListMetadataKeysResponse) {}

  // GetAllMetadata returns all node metadata at once
  rpc GetAllMetadata(google.protobuf.Empty) returns (GetAllMetadataResponse) {}
}

// Block contains all the components of a complete block
message Block {
  SignedHeader header = 1;
  Data         data   = 2;
}

// GetBlockRequest defines the request for retrieving a block
message GetBlockRequest {
  // The height or hash of the block to retrieve
  oneof identifier {
    uint64 height = 1;
    bytes  hash   = 2;
  }
}

// GetBlockResponse defines the response for retrieving a block
message GetBlockResponse {
  Block block = 1;
}

// GetStateResponse defines the response for retrieving the current state
message GetStateResponse {
  rollkit.v1.State state = 1;
}

// GetMetadataRequest defines the request for retrieving metadata by key
message GetMetadataRequest {
  string key = 1;
}

// GetMetadataResponse defines the response for retrieving metadata
message GetMetadataResponse {
  bytes value = 1;
}

// MetadataKey describes a metadata key with its description
message MetadataKey {
  string key = 1;
  string description = 2;
}

// ListMetadataKeysResponse defines the response for listing metadata keys
message ListMetadataKeysResponse {
  repeated MetadataKey keys = 1;
}

// MetadataEntry represents a key-value pair of metadata
message MetadataEntry {
  string key = 1;
  bytes value = 2;
}

// GetAllMetadataResponse defines the response for retrieving all metadata
message GetAllMetadataResponse {
  repeated MetadataEntry metadata = 1;
}
